提交dist文件到gh-pages分支

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,9 @@ jobs:
         with:
           persist-credentials: false
 
-      # 生成静态文件
-      - name: Build
-        run: yarn && npm run build
+      # # 生成静态文件
+      # - name: Build
+      #   run: yarn && npm run build
 
       # 部署到 GitHub Pages
       - name: Deploy
