--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "dev": "vuepress dev docs",
-    "build": "vuepress build docs"
+    "build": "vuepress build docs",
+    "deploy": "bash deploy.sh"
   },
   "name": "vuepress-test",
   "version": "1",
@@ -14,6 +15,7 @@
     "vuepress": "^1.9.7"
   },
   "dependencies": {
+    "gh-pages": "^4.0.0",
     "vuepress-theme-reco": "^1.6.14"
   }
 }
